# smart-visitor-management-system

./: .env  README.md  pyproject.toml
core/: settings.py
organisations/migrations/: 0001_initial.py
user/: models.py
user/migrations/: 0001_initial.py
