[project]
name = "smart-visitor-management-system"
version = "0.1.0"
description = ""
authors = [
    {name = "Ryanne245",email = "odohchidalu125@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
